--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,25 +1,31 @@
 .App {
   text-align: center;
   font-family: "Courier New", monospace;
-  width: 100%; }
+  width: 100%;
+}
 
 h1 {
   font-weight: normal;
-  font-size: 42px; }
+  font-size: 42px;
+}
 
 .passwords {
   list-style: none;
   padding: 0;
   font-size: 32px;
-  margin-bottom: 2em; }
+  margin-bottom: 2em;
+}
 
 .more {
   font-size: 32px;
   font-family: "Courier New", monospace;
   border: 2px solid #000;
   background-color: #fff;
-  padding: 10px 25px; }
-  .more:hover {
-    background-color: red; }
-  .more:active {
-    background-color: #FFEFA9; }
+  padding: 10px 25px;
+  &:hover {
+    background-color: red;
+  }
+  &:active {
+    background-color: #FFEFA9;
+  }
+}
