--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,25 +1,49 @@
-.App {
-  text-align: center;
-  font-family: "Courier New", monospace;
-  width: 100%; }
+* {
+  box-sizing: border-box;
+  font-size: 14px; }
 
-h1 {
-  font-weight: normal;
-  font-size: 42px; }
+.card-wrap {
+  width: 150px;
+  height: 200px;
+  border: 1px solid black;
+  display: inline-block;
+  margin-left: 8px; }
+  .card-wrap__value {
+    font-size: 18px; }
+  .card-wrap__icon--black {
+    color: black; }
+  .card-wrap__icon--red {
+    color: red; }
 
-.passwords {
-  list-style: none;
-  padding: 0;
-  font-size: 32px;
-  margin-bottom: 2em; }
+.row {
+  display: inline-flex;
+  width: 100%;
+  flex-wrap: wrap; }
+  .row__right {
+    display: inline-flex;
+    margin-left: auto; }
+  .row--spaced > *:not(:last-child) {
+    margin-right: 8px; }
 
-.more {
-  font-size: 32px;
-  font-family: "Courier New", monospace;
-  border: 2px solid #000;
-  background-color: #fff;
-  padding: 10px 25px; }
-  .more:hover {
-    background-color: red; }
-  .more:active {
-    background-color: #FFEFA9; }
+.text-input {
+  border-radius: 2px;
+  height: 36px;
+  padding-left: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  text-overflow: ellipsis;
+  transition: .3s ease-out;
+  outline: none; }
+  .text-input:hover, .text-input:focus {
+    border: 1px solid rgba(64, 170, 240, 0.7); }
+  .text-input:focus {
+    box-shadow: 0 0 5px rgba(64, 170, 240, 0.7); }
+
+.button {
+  border-radius: 2px;
+  height: 36px;
+  text-transform: uppercase;
+  transition: .3s box-shadow ease-out;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
+  .button:hover {
+    cursor: pointer;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2); }
